--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,33 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+# LaTex Aux Files - courtesy of https://gist.github.com/kogakure/149016
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
+*.fdb_latexmk
+*.fls
+
+# Files generated when moving from Windows to WSL
+*:Zone.Identifier
